# Job-Search

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AI-PROJECT-LOG.md  PROJECT-STRUCTURE.md  README.md  package-lock.json  package.json  setup_supabase.ps1
.ai/codex/: add-comments.md  codex.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
docs/: AI-Integration.md  AI-PROJECT-LOG-Backup.md  Persona.md  Scraper-Phase.md  phase-3.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx
notes/crawl4ai_docs/: changelog.md  consolidated_docs.json  consolidated_docs.md  contact.md  examples.md  installation.md  introduction.md  quickstart.md
notes/crawl4ai_docs/examples/: hooks_auth.md  js_execution_css_filtering.md  json_css_extraction.md  llm_extraction.md  research_assistant.md  summarization.md
notes/crawl4ai_docs/full_details/: advanced_features.md  advanced_jsoncss_extraction.md  chunking_strategies.md  crawl_request_parameters.md  crawl_result_class.md  extraction_strategies.md  session_based_crawling.md
revisions/: linkedinscraper.md  rev-1.md
todos/: MASTER-PHASE.md
todos/phases/phase-1/: Phase-1.md
todos/phases/phase-1/tasks/: Task-1.md  Task-10.md  Task-11.md  Task-12.md  Task-13.md  Task-14.md  Task-15.md  Task-2.md  Task-3.md  Task-4.md  Task-5.md  Task-6.md  Task-7.md  Task-8.md  Task-9.md  prompt.txt
